<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/pre_survey"
            android:title="@string/pre_survey"/>
        <item
            android:id="@+id/lecture_1"
            android:title="@string/lecture_1" />
        <item
            android:id="@+id/lecture_2"
            android:title="@string/lecture_2" />
        <item
            android:id="@+id/lecture_3"
            android:title="@string/lecture_3" />
        <item
            android:id="@+id/lecture_4"
            android:title="@string/lecture_4" />
        <item
            android:id="@+id/post_survey"
            android:title="@string/post_survey"/>
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:title="Share" />
            <item
                android:id="@+id/about_instructor"
                android:title="@string/about_instructor" />
        </menu>
    </item>

</menu>
