<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.AlertDialogLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.eunice.jan.PreSurveyFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/background_dark"
        android:text="@string/what_do_you_think_about_this_course"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:textSize="17sp"/>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radio_group_one">
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/very_good"
            android:id="@+id/very_good"
            android:textSize="17sp"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:onClick="onRadioButton"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/good"
            android:id="@+id/good"
            android:textSize="17sp"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:onClick="onRadioButton"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/normal"
            android:id="@+id/normal"
            android:textSize="17sp"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:onClick="onRadioButton"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bad"
            android:id="@+id/bad_one"
            android:textSize="17sp"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:onClick="onRadioButton"/>
    </RadioGroup>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:text="@string/next_pager"/>
</android.support.v7.widget.AlertDialogLayout>