<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.eunice.jan.SignIn">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_person_black_24dp"
                android:drawableStart="@drawable/ic_person_black_24dp"
                android:hint="@string/your_username"
                android:textSize="16sp"
                android:id="@+id/username"
                android:textStyle="italic"
                android:inputType="text"
                android:drawablePadding="10dp"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="140dp">

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:drawablePadding="10dp"
                android:textSize="16sp"
                android:textStyle="italic"
                android:inputType="textEmailAddress"
                android:textColorHint="#000"
                android:backgroundTint="#000"
                android:id="@+id/email_address"
                android:drawableLeft="@drawable/ic_email_black_24dp"
                android:drawableStart="@drawable/ic_email_black_24dp"/>
        </android.support.design.widget.TextInputLayout>



        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/show_hide"
            android:layout_marginTop="200dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTintMode="src_in">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter your password"
                android:drawablePadding="10dp"
                android:textSize="16sp"
                android:textStyle="italic"
                android:textColorHint="#000"
                android:backgroundTint="#000"
                android:id="@+id/password"
                android:inputType="textPassword"
                android:drawableLeft="@drawable/ic_lock_black_24dp"
                android:drawableStart="@drawable/ic_lock_black_24dp"
                />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="300dp"
            android:layout_marginLeft="150dp"
            android:text="@string/sign"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:id="@+id/sign_in"
            android:textStyle="italic"
            android:textColor="#009"
            android:background="#aba" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="120dp"
            android:layout_marginLeft="20dp"
            android:textSize="15sp"
            android:textColor="#000"
            android:id="@+id/textView2"
            android:layout_marginTop="380dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="120dp"
            android:layout_marginLeft="230dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:id="@+id/sign_up"
            android:layout_marginTop="380dp"
            android:textColor="@color/colorAccent"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot"
            android:layout_marginBottom="90dp"
            android:layout_marginLeft="20dp"
            android:textStyle="bold|italic"
            android:id="@+id/forgot"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginTop="420dp"/>
</RelativeLayout>

