<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.eunice.jan.Dashboard">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:fitsSystemWindows="true"
        style="@style/ThemeOverlay.AppCompat"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">
        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:id="@+id/dashboard_collapsing_toolbar"
            app:expandedTitleMarginStart="20dp"
            android:background="@drawable/page"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="40sp"
                android:textColor="#5aa"
                android:text="@string/dashboard"
                android:layout_gravity="center|bottom"/>
            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:elevation="7dp"
                tools:targetApi="lollipop">

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="300dp"
        android:layout_marginLeft="20dp"
        android:id="@+id/course_one_card_view"
        android:layout_marginRight="20dp"
        app:cardBackgroundColor="@android:color/darker_gray">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="5">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/course"
                android:gravity="start"
                android:textColor="@android:color/white"
                style="@style/TextAppearance.AppCompat.Body2"
                android:textSize="17sp"
                android:layout_weight="0.2"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/java"
                android:textSize="23sp"
                android:layout_weight="1.5"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="16sp"
                android:layout_weight="0.5"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_weight="1.8"
                android:text=
                    "@string/the_course_helps_you_as_a_beginner_to_understand_the_basics_of_java_as_a_programming_language"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="4">
                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:max="100"
                    android:layout_weight="3.8"
                    android:progress="5"
                    android:background="@android:color/white"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:text="@string/_5"
                    android:textSize="18sp"
                    android:textColor="@color/colorAccent"
                    android:layout_marginLeft="15dp"
                    />
            </LinearLayout>


        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_add_black_24dp"
        app:fabSize="auto"/>

</android.support.design.widget.CoordinatorLayout>
